--- a/src/global.scss
+++ b/src/global.scss
@@ -7,16 +7,43 @@ html {
   max-width: 600px;
   min-height: 100dvh;
   margin: 0 auto;
-  font-size: 1.4rem;
+  padding: 0 10px;
 }
 
 .inner {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 30px;
   flex: 1 1 0%;
 }
 
 h1.ant-typography {
   margin-top: 0;
+}
+
+.ant-form-item {
+  margin-bottom: 0;
+
+  & + .ant-form-item {
+    margin-top: 10px;
+  }
+}
+
+.chk-type-button {
+  .ant-checkbox {
+    &-wrapper {
+      position: relative;
+      background-color: #1e88e5;
+      border-radius: 4px;
+
+      &-checked {
+        background-color: #1565c0;
+        color: #ffffff;
+      }
+    }
+
+    &-inner {
+      display: none;
+    }
+  }
 }
