--- a/src/global.scss
+++ b/src/global.scss
@@ -1,6 +1,5 @@
 html {
   line-height: 1.5;
-  font-size: 62.5%;
 }
 
 .wrap {
@@ -29,21 +28,41 @@ h1.ant-typography {
   }
 }
 
-.chk-type-button {
+.chk-button {
   .ant-checkbox {
     &-wrapper {
+      height: 32px;
+      line-height: 30px;
+      flex: 1;
+      background: #ffffff;
+      border: 1px solid #d9d9d9;
       position: relative;
-      background-color: #1e88e5;
-      border-radius: 4px;
+      border-radius: 6px;
+      justify-content: center;
+      transition: color 0.2s, background 0.2s, box-shadow 0.2s;
 
       &-checked {
-        background-color: #1565c0;
+        background: #1677ff;
+        border-color: #1677ff;
         color: #ffffff;
+      }
+
+      &-disabled {
+        background-color: rgba(0, 0, 0, 0.04);
+        color: rgba(0, 0, 0, 0.25);
       }
     }
 
     &-inner {
       display: none;
     }
+  }
+}
+
+.rdo-button {
+  gap: 8px;
+
+  > label {
+    border-radius: 6px;
   }
 }
