--- a/src/styles/layout/header.scss
+++ b/src/styles/layout/header.scss
@@ -24,7 +24,7 @@
         &-item {
           padding-inline-end: 0;
           padding-left: 44px;
-          background: url("../../public/ico_global.png") no-repeat 12px center / 24px;
+          background: url("/ico_global.png") no-repeat 12px center / 24px;
           font-weight: 500;
           font-size: 1.6rem;
           color: #222222;
