--- a/src/global.scss
+++ b/src/global.scss
@@ -15,6 +15,8 @@ html {
   flex: 1 1 0%;
   border-left: 1px solid #000;
   border-right: 1px solid #000;
+  // background: url("../public/bg.png") no-repeat center;
+  // background-size: cover;
 }
 
 h1.ant-typography {
@@ -271,7 +273,20 @@ h1.ant-typography {
   right: 20px;
 
   > button {
-    width: 100%;
+    height: 56px;
+    border-radius: 12px;
+
+    &:first-child {
+      width: calc(33.3333% - 4px);
+    }
+
+    &:last-child {
+      width: calc(66.6667% - 4px);
+    }
+
+    &:only-child {
+      width: 100%;
+    }
   }
 }
 
@@ -457,6 +472,85 @@ h1.ant-typography {
     &::before,
     &::after {
       background-color: #6152ed;
+    }
+  }
+}
+
+// common
+.ft-cl {
+  &-light-gray {
+    color: #aaa !important;
+  }
+
+  &-gray {
+    color: #555;
+  }
+
+  &-dark {
+    color: #222;
+  }
+
+  &-primary {
+    color: #6152ed;
+  }
+}
+
+.mt {
+  &-60 {
+    margin-top: 6rem;
+  }
+}
+
+// info
+.content {
+  strong {
+    font-size: 20px;
+    color: #aaaaaa;
+
+    em {
+      color: #6152ed;
+      font-style: normal;
+    }
+  }
+}
+
+.ant-input-wrap {
+  height: 48px;
+
+  .ant-row {
+    display: block;
+  }
+}
+
+h2.ant-typography {
+  &.product {
+    margin-top: 4rem;
+
+    & + span.ant-typography {
+      display: block;
+      margin-top: 0.8rem;
+    }
+  }
+}
+
+// notice
+.notice {
+  > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100vh;
+  }
+
+  &-inner {
+    position: relative;
+
+    > span {
+      display: block;
+      margin-top: 16px;
     }
   }
 }
