bg 높이값 수정

--- a/src/global.scss
+++ b/src/global.scss
@@ -542,7 +542,7 @@ h2.ant-typography {
     right: 0;
     object-fit: cover;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
   }
 
   &-inner {
