--- a/src/global.scss
+++ b/src/global.scss
@@ -18,8 +18,6 @@ body {
   padding-bottom: env(safe-area-inset-bottom);
   padding-top: env(safe-area-inset-top);
   padding: 80px 0 48px;
-  border-left: 1px solid #000;
-  border-right: 1px solid #000;
 
   .main {
     min-height: calc(100vh - 80px - 48px);
@@ -307,7 +305,7 @@ h1.ant-typography {
 
 .slider-wrap {
   position: relative;
-  padding-top: 125px;
+  padding-top: 105px;
   padding-bottom: 32px;
   display: flex;
   flex-direction: column;
@@ -315,7 +313,7 @@ h1.ant-typography {
 
   > article {
     position: absolute;
-    top: 20px;
+    top: 0;
     left: 50%;
     transform: translateX(-50%);
     font-weight: 600;
@@ -385,11 +383,11 @@ h1.ant-typography {
       }
 
       &[aria-valuenow="0"] {
-        left: 2% !important;
+        left: 3% !important;
       }
 
       &[aria-valuenow="100"] {
-        left: 98% !important;
+        left: 97% !important;
       }
     }
 
@@ -572,28 +570,26 @@ h2.ant-typography {
       font-size: 30px;
     }
 
-    > b {
-      display: block;
-      margin-top: 8px;
-      font-weight: 600;
-      font-size: 18px;
-    }
-
-    p {
-      margin-top: 4px;
-      font-size: 16px;
-      color: #555;
-    }
-
-    .ant-radio {
-      &-group {
-        margin-top: 20px;
+    .ant {
+      &-space {
+        &-item {
+          &:last-child {
+            margin-bottom: 20px;
+          }
+        }
       }
 
-      &-button-wrapper {
-        position: relative;
-        height: 84px;
-        line-height: 82px;
+      &-radio {
+        &-button-wrapper {
+          position: relative;
+          height: 84px;
+          line-height: 82px;
+        }
+      }
+
+      &-input {
+        resize: none;
+        height: 100px;
       }
     }
   }
