높이 재수정

--- a/src/global.scss
+++ b/src/global.scss
@@ -14,6 +14,7 @@ body {
   position: relative;
   // min-height: 100dvh;
   min-height: calc(100dvh - 80px - 48px);
+  height: calc(100dvh - 128px);
   max-width: 1000px;
   margin: 0 auto;
   padding-bottom: env(safe-area-inset-bottom);
