--- a/src/global.scss
+++ b/src/global.scss
@@ -12,16 +12,20 @@ body {
 
 .wrap {
   position: relative;
-  min-height: calc(100dvh - 48px);
+  // min-height: calc(100dvh - 48px);
+  min-height: 100dvh;
   max-width: 1000px;
   margin: 0 auto;
   padding-bottom: env(safe-area-inset-bottom);
   padding-top: env(safe-area-inset-top);
   padding: 80px 0 48px;
+  background-color: seagreen;
 
   .main {
-    min-height: calc(100vh - 80px - 48px);
+    // min-height: calc(100vh - 80px - 48px);
+    flex: 1;
     padding: 0 20px;
+    background-color: #1677ff;
 
     > * {
       &:first-child {
