--- a/src/global.scss
+++ b/src/global.scss
@@ -19,13 +19,13 @@ body {
   padding-bottom: env(safe-area-inset-bottom);
   padding-top: env(safe-area-inset-top);
   padding: 80px 0 48px;
-  background-color: seagreen;
+  // background-color: seagreen;
 
   .main {
     // min-height: calc(100vh - 80px - 48px);
     flex: 1;
     padding: 0 20px;
-    background-color: #1677ff;
+    // background-color: #1677ff;
 
     > * {
       &:first-child {
