--- a/src/global.scss
+++ b/src/global.scss
@@ -533,55 +533,84 @@ h1.ant-typography {
   }
 }
 
-.modal-bottom {
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
-  .ant {
-    &-drawer {
-      &-header {
-        border-bottom: none;
-        padding: 12px 24px;
-        &-title {
-          flex-direction: row-reverse;
-        }
-      }
-      &-title {
-        font-size: 18px;
-        color: #000;
-      }
-      &-body {
-        padding: 8px 24px 48px;
-      }
-      &-close {
-        margin-inline-end: 0 !important;
-      }
-    }
-    &-radio {
-      &-group {
-        flex-direction: column;
-      }
-      &-button {
-        &-wrapper {
-          border: none;
-          text-align: left;
-          padding: 12px 16px;
-          border-radius: 12px;
-          box-sizing: border-box;
-          transition: none;
-          &-checked {
-            background: #f1efff url(../public/icon-check-purple.svg) no-repeat calc(100% - 16px) center !important;
-            border-color: #f1efff !important;
+.modal {
+  &-bottom {
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    .ant {
+      &-drawer {
+        &-header {
+          border-bottom: none;
+          padding: 12px 24px;
+          &-title {
+            flex-direction: row-reverse;
           }
         }
-        &-label {
-          font-size: 20px;
-          font-weight: 400;
+        &-title {
+          font-size: 18px;
           color: #000;
         }
-        &-checked {
-          & + .ant-radio-button-label {
-            color: #6152ed;
-            font-weight: 600;
+        &-body {
+          padding: 8px 24px 48px;
+        }
+        &-close {
+          margin-inline-end: 0 !important;
+        }
+      }
+      &-radio {
+        &-group {
+          flex-direction: column;
+        }
+        &-button {
+          &-wrapper {
+            border: none;
+            text-align: left;
+            padding: 12px 16px;
+            border-radius: 12px;
+            box-sizing: border-box;
+            transition: none;
+            &-checked {
+              background: #f1efff url(../public/icon-check-purple.svg) no-repeat calc(100% - 16px) center !important;
+              border-color: #f1efff !important;
+            }
+          }
+          &-label {
+            font-size: 20px;
+            font-weight: 400;
+            color: #000;
+          }
+          &-checked {
+            & + .ant-radio-button-label {
+              color: #6152ed;
+              font-weight: 600;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &-alert {
+    padding: 0;
+
+    .ant {
+      &-modal {
+        &-content {
+          padding: 32px 20px 20px;
+        }
+        &-body {
+          text-align: center;
+          font-size: 16px;
+          font-weight: 500;
+        }
+        &-footer {
+          margin-top: 32px;
+
+          button {
+            width: 100%;
+            height: 56px;
+            border-radius: 12px;
+            margin-inline-start: 0 !important;
           }
         }
       }
