--- a/src/global.scss
+++ b/src/global.scss
@@ -862,6 +862,10 @@ h2.ant-typography {
 }
 
 .dnd {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+
   .ant {
     &-flex {
       > * {
@@ -876,10 +880,36 @@ h2.ant-typography {
     }
   }
 
+  &-wrap {
+    flex: 1;
+    border-radius: 8px;
+
+    > h4 {
+      text-align: center;
+      margin-bottom: 8px;
+    }
+
+    &:first-child {
+      flex: 0 0 100%;
+
+      .dnd-inner {
+        height: 80px;
+        // min-height: 80px;
+        flex-direction: row;
+        flex-wrap: wrap;
+      }
+    }
+  }
+
   &-inner {
     display: flex;
-    flex-wrap: wrap;
     gap: 12px;
+    height: 284px;
+    border-radius: 12px;
+    border: 1px solid #d3d3d3;
+    padding: 12px;
+    flex-direction: column;
+    overflow-y: auto;
   }
 
   &-item {
@@ -890,5 +920,6 @@ h2.ant-typography {
     font-size: 20px;
     font-weight: 500;
     text-align: center;
+    // flex: 1;
   }
 }
