--- a/src/global.scss
+++ b/src/global.scss
@@ -20,14 +20,13 @@ body {
   padding: 80px 0 48px;
 
   .main {
-    flex: 1;
     padding: 0 20px;
 
-    > * {
-      &:first-child {
-        flex: 1 1 0%;
-      }
-    }
+    // > * {
+    //   &:first-child {
+    //     flex: 1 1 0%;
+    //   }
+    // }
   }
 }
 
@@ -929,5 +928,18 @@ h2.ant-typography {
     font-size: 20px;
     font-weight: 500;
     text-align: center;
+  }
+}
+
+.kanal {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh - 80px - 48px);
+  gap: 40px;
+
+  > div {
+    &:first-child {
+      flex: 1;
+    }
   }
 }
