--- a/src/global.scss
+++ b/src/global.scss
@@ -943,3 +943,19 @@ h2.ant-typography {
     }
   }
 }
+
+.ant {
+  &-form {
+    &-item {
+      &-label {
+        text-align: start !important;
+
+        label {
+          &::after {
+            display: none !important;
+          }
+        }
+      }
+    }
+  }
+}
