--- a/src/global.scss
+++ b/src/global.scss
@@ -13,7 +13,7 @@ body {
 .wrap {
   position: relative;
   min-height: 100dvh;
-  max-width: 1000px;
+  max-width: 400px;
   margin: 0 auto;
   padding-bottom: env(safe-area-inset-bottom);
   padding-top: env(safe-area-inset-top);
@@ -21,12 +21,6 @@ body {
 
   .main {
     padding: 0 20px;
-
-    // > * {
-    //   &:first-child {
-    //     flex: 1 1 0%;
-    //   }
-    // }
   }
 }
 
@@ -326,11 +320,14 @@ h1.ant-typography {
 
 .slider-wrap {
   position: relative;
-  padding-top: 40px;
   padding-bottom: 32px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  &:has(article) {
+    padding-top: 40px;
+  }
 
   > article {
     position: absolute;
