--- a/src/global.scss
+++ b/src/global.scss
@@ -402,6 +402,13 @@ h1.ant-typography {
 
       &[aria-valuenow="0"] {
         left: 3% !important;
+
+        &::after {
+          background: url("../public/icon-arrow-both.svg"),
+            linear-gradient(90deg, rgba(173, 185, 194, 1) 0%, rgba(164, 169, 183, 1) 100%);
+          background-repeat: no-repeat;
+          background-position: center;
+        }
       }
 
       &[aria-valuenow="100"] {
@@ -888,6 +895,10 @@ h2.ant-typography {
     &:first-child {
       flex: 0 0 100%;
 
+      .ant-typography {
+        text-align: left;
+      }
+
       .dnd-inner {
         height: auto;
         min-height: 80px;
@@ -897,7 +908,8 @@ h2.ant-typography {
       }
 
       .dnd-item {
-        width: 67px;
+        // width: 67px;
+        width: calc((100% - 36px) / 4);
       }
     }
   }
@@ -918,7 +930,7 @@ h2.ant-typography {
   }
 
   &-item {
-    padding: 12px 15px;
+    padding: 12px 0;
     background-color: #f1efff;
     color: #6152ed;
     border-radius: 12px;
