--- a/src/global.scss
+++ b/src/global.scss
@@ -448,6 +448,7 @@ h1.ant-typography {
         width: 50px;
         height: 22px;
         top: 25px;
+        color: #4d4d4d;
 
         &:first-child {
           left: 2% !important;
@@ -899,23 +900,24 @@ h2.ant-typography {
     }
 
     &:first-child {
-      flex: 0 0 100%;
+      // flex: 0 0 100%;
 
       .ant-typography {
         text-align: left;
       }
 
       .dnd-inner {
-        height: auto;
+        // height: auto;
         min-height: 80px;
         flex-direction: row;
         flex-wrap: wrap;
-        overflow: hidden;
+        // overflow: hidden;
       }
 
       .dnd-item {
         // width: 67px;
-        width: calc((100% - 36px) / 4);
+        // width: calc((100% - 36px) / 4);
+        width: 100%;
       }
     }
   }
