--- a/src/global.scss
+++ b/src/global.scss
@@ -897,6 +897,7 @@ h2.ant-typography {
     > h4 {
       text-align: center;
       margin-bottom: 8px;
+      line-height: 28px;
     }
 
     &:first-child {
@@ -908,10 +909,10 @@ h2.ant-typography {
 
       .dnd-inner {
         // height: auto;
-        min-height: 80px;
+        height: 80px;
         flex-direction: row;
         flex-wrap: wrap;
-        // overflow: hidden;
+        overflow: hidden;
       }
 
       .dnd-item {
@@ -945,6 +946,75 @@ h2.ant-typography {
     font-size: 20px;
     font-weight: 500;
     text-align: center;
+  }
+
+  &-ranking {
+    display: grid;
+    grid-template-columns: 63% 1fr;
+    grid-template-rows: repeat(3, auto);
+    gap: 24px 12px;
+    align-items: start;
+
+    > div {
+      grid-column: 1;
+
+      > .ant-typography {
+        text-align: left;
+      }
+
+      &:first-child {
+        grid-row: 1;
+
+        .dnd-inner {
+          max-width: 109px;
+        }
+      }
+
+      &:nth-child(2) {
+        grid-row: 2;
+
+        .dnd-inner {
+          flex-direction: row;
+          flex-wrap: wrap;
+          align-content: flex-start;
+
+          .dnd-item {
+            width: calc((100% - 12px) / 2);
+          }
+        }
+      }
+
+      &:nth-child(3) {
+        grid-row: 3;
+      }
+
+      &:last-child {
+        grid-column: 2;
+        grid-row: 1 / 4;
+        height: 100%;
+
+        .dnd-inner {
+          height: 100%;
+        }
+      }
+
+      .dnd-inner {
+        height: 228px;
+      }
+
+      .dnd-item {
+        height: 56px;
+      }
+
+      .req {
+        &::after {
+          content: "*";
+          font-size: 18px;
+          color: #f24f78;
+          margin-left: 5px;
+        }
+      }
+    }
   }
 }
 
